# Practice-Cpp-http-server

./: CMakeLists.txt  main.cpp
include/: dynamic_router_handler.h  file_handler.h  global_router.h  http_request.h  http_response.h  http_status.h  mimetype_utils.h  router.h  server_handler.h  url_utils.h
public/: auth.html  index.html  second.html
src/: dynamic_router_handler.cpp  file_handler.cpp  global_router.cpp  http_request.cpp  http_response.cpp  main.cpp  mimetype_utils.cpp  server_handler.cpp  url_utils.cpp
